# llm-couplet-composer

./: .gitignore  README.md  model_config.yml.example  pyproject.toml
llm_couplet/: chain.py  cli.py  prompt_templates.py  utils.py
